<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment"
    android:background="@color/purple_200">

<ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/editTextLogin"
    android:src="@drawable/logo"
    />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        android:hint="@string/password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateUser"
        />

    <Button
        android:id="@+id/buttonCreateUser"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        app:layout_constraintBottom_toTopOf="@+id/labelRetrievePassword"
        />

    <TextView
        android:id="@+id/labelRetrievePassword"
        android:layout_margin="20dp"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/retrievePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>