<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RetrieveMailFragment"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imageAvatar"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.5"
        />
    <TextView
        android:id="@+id/title"
        android:text="@string/retrieve_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/explain_screen"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explain_retrieve"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/mailToSend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        >
    </EditText>
    <Button
        android:id="@+id/buttonSendMail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_rounded_background"
        android:contentDescription="Send"
        android:text="@string/retrieve_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>