<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageAvatar"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.5"
        />
    <TextView
        android:id="@+id/title"
        android:text="@string/choose_clan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/sayHello"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_hello"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/explain_screen"
        app:layout_constraintTop_toBottomOf="@id/sayHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explain_clan"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>