<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.connect.CreateUserFragment"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imageAvatar"
        android:src="@drawable/logo"
        android:layout_margin="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.5"
        />

<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/imageAvatar"
    app:layout_constraintBottom_toTopOf="@id/buttonCreateUser">
    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="abcd1234ABC??"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutVerifPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextVerifPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:text="abcd1234ABC?"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonCreateUser"
        android:layout_margin="20dp"
        android:text="@string/signUp"
        android:src="@drawable/ic_stat_name"
        android:background="@drawable/input_rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>