<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".fragment.jeu.ProfileFragment">

    <include
        android:id="@+id/header"
        layout="@layout/include_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/imgBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imgClan"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:src="@drawable/clan_rouge" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login_user"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBanner" />

    <TextView
        android:id="@+id/labelClan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clan_user"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelLogin" />

    <LinearLayout
        android:id="@+id/groupLabelExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelClan">

        <TextView
            android:id="@+id/labelNiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"

            />

        <TextView
            android:id="@+id/labelExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expAffiche"

            />
    </LinearLayout>

    <View
        android:id="@+id/backExp"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_rounded_background"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/groupLabelExp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/groupLabelExp"
        app:layout_constraintTop_toTopOf="@id/groupLabelExp"

        />

    <View
        android:id="@+id/frontExp"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@drawable/input_rounded_background"
        android:backgroundTint="@color/TintFive"
        app:layout_constraintBottom_toBottomOf="@id/backExp"
        app:layout_constraintStart_toStartOf="@id/backExp"
        app:layout_constraintTop_toTopOf="@id/backExp"

        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupLabelExp"
        app:layout_constraintBottom_toTopOf="@id/contenair_navigation">
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ico_gamelle"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/gamelle" />

            <TextView
                android:id="@+id/nbr_croquette"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nbCroquet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ico_cat"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:src="@drawable/patte"
                android:contentDescription="Logo en forme de patte de chat"/>

            <TextView
                android:id="@+id/nbr_cat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nbCat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
<LinearLayout
    android:id="@+id/contenair_navigation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/BtnProfil"
        style="@style/round_button"
        android:src="@drawable/ico_user"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/BtnHistorique"
        style="@style/round_button"
        android:src="@drawable/ico_chat"
        tools:ignore="SpeakableTextPresentCheck" />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>